# mruntime

./: .gitignore  CMakeLists.txt  MLAS_BENCHMARK.md  README.md  main.cpp
bench/: CMakeLists.txt  bench.cpp  mruntime_bench.cpp  qwen2_e2e_bench.cpp
cli/: mruntime_chat.cpp  mruntime_chat_lite.cpp
include/mruntime/: arena.h  backend.h  cpu_backend.h  dtype.h  inference_engine.h  logging.h  mruntime.h  profiling_backend.h  pthreadpool_raii.h  qwen2_forward.h  qwen2_generate.h  qwen2_ops.h  qwen2_weights.h  qwen_config.h  qwen_model.h  runtime_formats.h  safetensors.h  tensor.h  trace.h
src/: qwen2_forward.cpp  qwen2_generate.cpp  qwen2_ops.cpp  qwen2_weights.cpp  qwen_config.cpp
src/core/: cpu_backend.cpp  kai_gemm.cpp  kai_gemm.h  pthreadpool.cpp  sync.cpp  sync.h  tensor.cpp  thread_pool.cpp  thread_pool.h  timer.h  trace.cpp
src/core/kernel/: flash_attention_strided.cpp  kernel.h  neon.h
src/engine/: inference_engine.cpp
src/loader/: safetensors.cpp
src/models/qwen/: qwen_model.cpp
src/tokenizer/: bpe.cpp  bpe.hpp  qwen2_tokenizer.cpp  qwen2_tokenizer.h
test/: CMakeLists.txt  backend_test.cpp  engine_test.cpp  loader_test.cpp  model_test.cpp  profiling_backend_test.cpp  pthreadpool_raii_test.cpp  qwen2_ops_test.cpp  qwen2_tokenizer_test.cpp  tensor_test.cpp  thread_pool_test.cpp  tokenizer_test.cpp
